# cidlab-jagsmodule

./: .gitignore  README.md  build_instructions.txt  example.R  simData.R
examples/: TALLY.R  TALLYk.R  TTB.R  WADD.R  generalAccumulator.R  kReason.R  randomWalk.R
module/: configure.ac
module/src/: Bernoulli.cc  Makefile.am  cidlab.cc  wfComboPack.cc
module/src/distributions/: DBern.cc  DBern.h  Makefile.am
module/src/distributions/.deps/: Bernoullidist_la-DBern.Plo
module/src/distributions/.libs/: Bernoullidist.la
module/src/functions/: HDP.cc  HDP.h  LogBernFun.cc  LogBernFun.h  Makefile.am  ResWagner.cc  ResWagner.h  TALLY.cc  TALLY.h  TALLYk.cc  TALLYk.h  TTB.cc  TTB.h  TTBk.cc  TTBk.h  WADD.cc  WADD.h  WADDk.cc  WADDk.h  WFCP.cc  WFCP.h  generalAccumulator.cc  generalAccumulator.h  kReason.cc  kReason.h  randomWalk.cc  randomWalk.h
module/src/functions/.deps/: Bernoullifunc_la-LogBernFun.Plo
module/src/functions/.libs/: Bernoullifunc.la
