noinst_LTLIBRARIES = cidlabfunc.la

cidlabfunc_la_CPPFLAGS = -I$(top_srcdir)/src -I$(includedir)/JAGS

cidlabfunc_la_LDFLAGS = -no-undefined -module -avoid -version

cidlabfunc_la_SOURCES = ResWagner.cc
cidlabfunc_la_SOURCES += TTB.cc
cidlabfunc_la_SOURCES += TTBk.cc
cidlabfunc_la_SOURCES += WFCP.cc
cidlabfunc_la_SOURCES += TALLYk.cc

noinst_HEADERS = ResWagner.h
noinst_HEADERS += TTB.h
noinst_HEADERS += TTBk.h
noinst_HEADERS += WFCP.h
noinst_HEADERS += TALLYk.h
