noinst_LTLIBRARIES = cidlabfunc.la

cidlabfunc_la_CPPFLAGS = -I$(top_srcdir)/src -I$(includedir)/JAGS

cidlabfunc_la_LDFLAGS = -no-undefined -module -avoid -version

cidlabfunc_la_SOURCES = ResWagner.cc
cidlabfunc_la_SOURCES += TTB.cc
cidlabfunc_la_SOURCES += TALLY.cc
cidlabfunc_la_SOURCES += TALLYk.cc
cidlabfunc_la_SOURCES += WADD.cc
cidlabfunc_la_SOURCES += randomWalk.cc
cidlabfunc_la_SOURCES += generalAccumulator.cc
cidlabfunc_la_SOURCES += kReason.cc

noinst_HEADERS = ResWagner.h
noinst_HEADERS += TTB.h
noinst_HEADERS += TALLY.h
noinst_HEADERS += TALLYk.h
noinst_HEADERS += WADD.h
noinst_HEADERS += randomWalk.h
noinst_HEADERS += generalAccumulator.h
noinst_HEADERS += kReason.h
